added an annoying sound on goal for funsies

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <audio src="assets/audio/Goal.mp3" id="goal"></audio>
     <div>
         <h1>My JS Game</h1>
         <div id="reset-container">
